Removed empty comment

--- a/texts/en_US.lang
+++ b/texts/en_US.lang
@@ -4,4 +4,4 @@
 ## comment on the same line, use TABs.
 
 chat.type.sleeping=§e%s §ris sleeping in a bed.
-multiplayer.playersSleeping=%s/1 players sleeping	#
+multiplayer.playersSleeping=%s/1 players sleeping
